feat(ai): integrate ML prediction models for churn & engagement analysis