@@ -6,11 +6,12 @@ import com.trustedwork.module06.repository.LeaderboardRepository;
 import com.trustedwork.module06.repository.GrowthProfileRepository;
 import com.trustedwork.module06.service.LeaderboardService;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
+@Slf4j
 @Service
 @RequiredArgsConstructor
 public class LeaderboardServiceImpl implements LeaderboardService {
@@ -24,13 +25,13 @@ public class LeaderboardServiceImpl implements LeaderboardService {
     @Override
     public List<LeaderboardDTO> getGlobalLeaderboard() {
         return leaderboardRepository.findAllByOrderByEngagementRankAsc()
-                .stream().map(this::toDTO).collect(Collectors.toList());
+                .stream().map(this::toDTO).toList();
     }
 
     @Override
     public List<LeaderboardDTO> getLeaderboardByGovernorate(String governorate) {
         return leaderboardRepository.findByGovernorateOrderByEngagementRankAsc(governorate)
-                .stream().map(this::toDTO).collect(Collectors.toList());
+                .stream().map(this::toDTO).toList();
     }
 
     @Override
@@ -49,12 +50,12 @@ public class LeaderboardServiceImpl implements LeaderboardService {
                 java.util.Map<String, Object> userData = restTemplate.getForObject(USER_SERVICE_URL + gp.getUserId(), java.util.Map.class);
                 if (userData != null && userData.get("location") != null) {
                     location = userData.get("location").toString().trim();
-                    System.out.println(">>> [LEADERBOARD] Fetched real location for User " + gp.getUserId() + ": [" + location + "]");
+                    log.info(">>> [LEADERBOARD] Fetched real location for User {}: [{}]", gp.getUserId(), location);
                 } else {
-                    System.out.println(">>> [LEADERBOARD] No location found for User " + gp.getUserId() + ", using fallback: [" + location + "]");
+                    log.info(">>> [LEADERBOARD] No location found for User {}, using fallback: [{}]", gp.getUserId(), location);
                 }
             } catch (Exception e) {
-                System.err.println(">>> [LEADERBOARD] API Error fetching location for User " + gp.getUserId() + ": " + e.getMessage());
+                log.error(">>> [LEADERBOARD] API Error fetching location for User {}: {}", gp.getUserId(), e.getMessage());
             }
 
             Leaderboard lb = leaderboardRepository.findByUserId(gp.getUserId())
@@ -78,7 +79,7 @@ public class LeaderboardServiceImpl implements LeaderboardService {
         for (int i = 0; i < all.size(); i++) {
             Leaderboard lb = all.get(i);
             lb.setEngagementRank(i + 1);
-            System.out.println(">>> [LEADERBOARD] User " + lb.getUserId() + " rank " + lb.getEngagementRank() + " in region " + lb.getGovernorate());
+            log.info(">>> [LEADERBOARD] User {} rank {} in region {}", lb.getUserId(), lb.getEngagementRank(), lb.getGovernorate());
         }
         
         leaderboardRepository.saveAll(all);
